--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -37,14 +37,14 @@ auth_8 : "┗ Added By:-"
 
 # PLUGINS - Admins
 admin_1 : "Music is already Paused."
-admin_2 : "🎧 Voicechat Paused by {}!"
+admin_2 : "🎧 NALLA THANA POITTU IRRUKKU Y LEY IPDI PANRINGA "
 admin_3 : "Music is already resumed."
-admin_4 : "🎧 Voicechat Resumed by {}!"
+admin_4 : "🎧 INTHA VANTHUTTAN LA EN SINGAM "
 admin_5 : "Music is already muted."
-admin_6 : "🎧 Voicechat Muted by {}!"
+admin_6 : "🎧 NAKKU PO "
 admin_7 : "Music is already unmuted."
-admin_8 : "🎧 Voicechat Unmuted by {}!"
-admin_9 : "🎧 Voicechat End/Stopped by {}!"
+admin_8 : "🎧 LOVE YOU "
+admin_9 : "🎧 VELIYA PONGADA AYOGYA RASKAL "
 admin_10 : "🎧 Voicechat Skipped by {}!. No More Music in Queue."
 admin_11 : "Error while changing stream to **{0}**\n\nPlease use /skip again."
 admin_12 : "Unable to skip to a specific track because of enabled loop play. Please disable loop play via `/loop disable` to use this feature."
